<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etAddAffairActivityNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/bg_time_border"
                android:layout_marginRight="30dp"
                android:maxLines="5"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingTop="8dp"
                android:hint="@string/addaffair_activity_hint" />

            <TextView
                android:id="@+id/tvAddAffairActivityTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_time_border"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/addaffair_activity_time" />

            <TextView
                android:id="@+id/tvAddAffairActivityType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_time_border"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/addaffair_activity_type" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAddAffariActivitySubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/app_submit"
            android:textColor="@color/white_fff"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>