<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llVhiContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivItemMovieIcon"
            android:layout_width="75dp"
            android:layout_height="100dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:id="@+id/llItemMovieCenter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/llVhiRight"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvItemMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/RatingBarItemMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_marginEnd="10dp"
                        android:isIndicator="true"
                        android:stepSize="1"
                        app:mrb_progressBackgroundTint="@color/_e3e3e3"
                        app:mrb_progressTint="@color/_feb501"
                        app:mrb_secondaryProgressTint="@color/_feb501" />

                    <TextView
                        android:id="@+id/tvItemMovieStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="11sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llItemMovieDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_fragment_directors"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvItemMovieDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llItemMovieActor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_fragment_actors"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvItemMovieActor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text=""
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llVhiRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvItemMovieSaw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_fragment_saw"
                    android:textColor="@color/_ff8592"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tvItemMovieWant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_hotting_movie_item_buy"
                    android:paddingLeft="13dp"
                    android:paddingTop="3dp"
                    android:paddingRight="13dp"
                    android:paddingBottom="3dp"
                    android:text="@string/movie_fragment_want_see"
                    android:textColor="@color/_ff8592"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/gray_666" />
</LinearLayout>